# gpd_ros2

./: CMakeLists.txt  package.xml
gpd_ros2_executables/: CMakeLists.txt  package.xml
gpd_ros2_executables/include/gpd_ros2_executables/: grasp_detection_server.h  grasp_messages.h
gpd_ros2_executables/src/: example_node.cpp  grasp_detection_server.cpp  grasp_messages.cpp
gpd_ros2_msg/: CMakeLists.txt  package.xml
gpd_ros2_msgs_2/: CMakeLists.txt
include/gpd_ros2/: grasp_detection_node.h  grasp_detection_server.h  grasp_detection_server_samples.h  grasp_messages.h  grasp_plotter.h
launch/: ur5.launch
msg/: CloudIndexed.msg  CloudSamples.msg  GraspConfigList.msg
src/gpd_ros2/: grasp_detection_node.cpp  grasp_detection_server.cpp  grasp_detection_server_samples.cpp  grasp_plotter.cpp
srv/: DetectGrasps.srv  DetectGraspsSamples.srv
